[package]
name = "instant-display"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "Get a display handle instantly"

[dependencies]
cfg-if = "1.0.0"
raw-window-handle = "0.5.2"

[target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox"))))'.dependencies]
once_cell = "1.18.0"
x11rb = { version = "0.12.0", default-features = false, features = ["allow-unsafe-code"] }

